--- a/lattice.yaml
+++ b/lattice.yaml
@@ -11,9 +11,9 @@ components:
     build:
       type: command_build
       source:
-        type: git_repository
-        url: https://github.com/gregbanks/static-http-cmd-build.git
-        tag: "0.0.1"
+        git_repository:
+          url: https://github.com/gregbanks/static-http-cmd-build.git
+          tag: "0.0.1"
       base_image: 
         repository: library/ubuntu
         tag: "18.04"
