--- a/lattice.yaml
+++ b/lattice.yaml
@@ -25,7 +25,7 @@ components:
       command:
         - python
         - -m
-        - SimpleHttpServer
+        - SimpleHTTPServer
         - "8888"
     ports:
       "8888":
